--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,8 @@
 <!doctype html>
-<html lang="en">
+<html
+  lang="en"
+  class="page"
+>
   <head>
     <meta charset="UTF-8" />
     <meta
@@ -8,12 +11,57 @@
     />
     <title>Title</title>
     <link
+      rel="preconnect"
+      href="https://fonts.googleapis.com"
+    />
+    <link
+      rel="preconnect"
+      href="https://fonts.gstatic.com"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
+      rel="stylesheet"
+    />
+    <link
       rel="stylesheet"
       href="./styles/main.scss"
     />
   </head>
-  <body>
-    <h1>Hello Mate Academy</h1>
-    <script src="scripts/main.js"></script>
+
+  <body class="page__body">
+    <header class="header">
+      <div class="container">
+        <div class="header__content">
+          <div class="header__top">
+            <div class="top-bar">
+              <a
+                href="#menu"
+                class="top-bar__icon icon icon--menu"
+              ></a>
+              <a
+                href="#"
+                class="top-bar__logo"
+              >
+                NA
+                <br />
+                MU
+              </a>
+            </div>
+          </div>
+
+          <div class="header__info">
+            <h1 class="header__title">ХУДОЖНІЙ МУЗЕЙ</h1>
+            <p class="header__element">ПОДІЇ</p>
+          </div>
+          <a
+            href="#"
+            class="header__button"
+          >
+            КВИТКИ
+          </a>
+        </div>
+      </div>
+      <div class="header__bg"></div>
+    </header>
   </body>
 </html>
