--- a/src/index.html
+++ b/src/index.html
@@ -63,5 +63,93 @@
       </div>
       <div class="header__bg"></div>
     </header>
+    <aside
+      class="menu page__menu"
+      id="menu"
+    >
+      <div class="container">
+        <div class="menu__content">
+          <div class="menu__top top-bar">
+            <a
+              href="#"
+              class="top-bar__icon icon icon--close"
+            ></a>
+            <div class="menu__nav nav">
+              <ul class="nav__list nav__list--left">
+                <li class="nav__item">
+                  <a
+                    href="#"
+                    class="nav__link"
+                  >
+                    Галерея
+                  </a>
+                </li>
+                <li class="nav__item">
+                  <a
+                    href="#"
+                    class="nav__link"
+                  >
+                    Виставки та
+                    <br />
+                    події
+                  </a>
+                </li>
+              </ul>
+              <ul class="nav__list nav__list--right">
+                <li class="nav__item">
+                  <a
+                    href="#"
+                    class="nav__link"
+                  >
+                    Про Нас
+                  </a>
+                </li>
+                <li class="nav__item">
+                  <a
+                    href="#"
+                    class="nav__link"
+                  >
+                    Контакти
+                  </a>
+                </li>
+              </ul>
+            </div>
+          </div>
+          <div class="menu__schedule schedule">
+            <p class="schedule__title">Графік роботи</p>
+            <div class="schedule__content">
+              <ul class="schedule__week">
+                <li class="schedule__day">
+                  <strong class="schedule__day--strong">12:00 — 20:00</strong>
+                  середа
+                </li>
+                <li class="schedule__day">
+                  <strong class="schedule__day--strong">12:00 — 20:00</strong>
+                  четвер
+                </li>
+                <li class="schedule__day">
+                  <strong class="schedule__day--strong">12:00 — 20:00</strong>
+                  п’ятниця
+                </li>
+                <li class="schedule__day">
+                  <strong class="schedule__day--strong">11:00 — 19:00</strong>
+                  субота
+                </li>
+                <li class="schedule__day">
+                  <strong class="schedule__day--strong">11:00 — 19:00</strong>
+                  неділя
+                </li>
+              </ul>
+              <p class="schedule__weekend">
+                <strong class="schedule__day--strong">Вихідні:</strong>
+                понеділок, вівторок
+                <br />
+                Каса припиняє роботу за 1 годину до закриття музею
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </aside>
   </body>
 </html>
