--- a/src/index.html
+++ b/src/index.html
@@ -24,7 +24,7 @@
     />
     <link
       rel="stylesheet"
-      href="./styles/main.scss"
+      href="./styles/style.scss"
     />
   </head>
 
@@ -151,5 +151,71 @@
         </div>
       </div>
     </aside>
+    <main class="main">
+      <div class="main__content">
+        <section class="relevant">
+          <div class="container">
+            <h2 class="relevant__title">Актуальні події</h2>
+            <div class="relevant__content">
+              <article class="relevant__event event">
+                <img
+                  src="./images/event/landscape.png"
+                  alt="landscape"
+                  class="event__img"
+                />
+                <div class="event__content">
+                  <div class="event__top">
+                    <p class="event__type">ВИСТАВКА</p>
+                    <p class="event__date">26.08-29.11.2019</p>
+                  </div>
+                  <h3 class="event__title">Йду і повертаюсь</h3>
+                  <p class="event__info">
+                    Національний Художній Музей України презентує унікальну
+                    частину колекції Градобанку - українське мистецтво другої
+                    половини 1980-1995 років.
+                  </p>
+                </div>
+              </article>
+              <article class="relevant__event event">
+                <img
+                  src="./images/event/girl-and-peacock.png"
+                  alt="girl and peacock"
+                  class="event__img"
+                />
+                <div class="event__content">
+                  <div class="event__top">
+                    <p class="event__type">ВИСТАВКА</p>
+                    <p class="event__date">26.08-29.11.2019</p>
+                  </div>
+                  <h3 class="event__title">І спогади і мрії</h3>
+                  <p class="event__info">
+                    Національний художній музей України до 100 річчя від дня
+                    народження видатної української художниці Тетяни Яблонської
+                    відкриває ретроспективну ювілейну виставку «І спогади і
+                    мрії».
+                  </p>
+                </div>
+              </article>
+            </div>
+          </div>
+          <article class="relevant__event event event--box">
+            <img
+              src="./images/event/sunrise.png"
+              alt="sunrise"
+              class="event__img event__img--all-width"
+            />
+            <div class="event__content event__content--box">
+              <div class="event__top event__top--box">
+                <p class="event__type">ЛЕКЦІЯ</p>
+                <p class="event__date">26/08/2019 - 11:00</p>
+              </div>
+              <h3 class="event__title event__title--box">
+                Від класицизму до романтизму
+              </h3>
+            </div>
+          </article>
+        </section>
+      </div>
+    </main>
   </body>
 </html>
