--- a/src/index.html
+++ b/src/index.html
@@ -215,6 +215,52 @@
             </div>
           </article>
         </section>
+        <section class="gallery">
+          <div class="container">
+            <h2 class="gallery__title">Галерея</h2>
+            <div class="gallery__content">
+              <div class="gallery__slider slider">
+                <div class="slider__slides">
+                  <div
+                    class="slider__slide slider__slide--1"
+                    id="slide-1"
+                  ></div>
+                  <div
+                    class="slider__slide slider__slide--2"
+                    id="slide-2"
+                  ></div>
+
+                  <div
+                    class="slider__slide slider__slide--3"
+                    id="slide-3"
+                  ></div>
+                  <div
+                    class="slider__slide slider__slide--4"
+                    id="slide-4"
+                  ></div>
+                </div>
+                <div class="slider__nav">
+                  <a
+                    href="#slide-1"
+                    class="slider__dot"
+                  ></a>
+                  <a
+                    href="#slide-2"
+                    class="slider__dot"
+                  ></a>
+                  <a
+                    href="#slide-3"
+                    class="slider__dot"
+                  ></a>
+                  <a
+                    href="#slide-4"
+                    class="slider__dot"
+                  ></a>
+                </div>
+              </div>
+            </div>
+          </div>
+        </section>
       </div>
     </main>
   </body>
