--- a/src/index.html
+++ b/src/index.html
@@ -261,6 +261,20 @@
             </div>
           </div>
         </section>
+        <section class="subscribe">
+          <div class="container">
+            <div class="subscribe__content">
+              <h2 class="subscribe__title">Підписка</h2>
+              <p class="subscribe__text">
+                Бути в курсі всіх актуальних подій та останніх новин.
+              </p>
+              <div class="subscribe__button">
+                <a href="#" class="subscribe__link">E-mail</a>
+                <div class="subscribe__button--arrow"></div>
+              </div>
+            </div>
+          </div>
+        </section>
       </div>
     </main>
   </body>
