--- a/src/index.html
+++ b/src/index.html
@@ -268,9 +268,13 @@
               <p class="subscribe__text">
                 Бути в курсі всіх актуальних подій та останніх новин.
               </p>
-              <div class="subscribe__button">
-                <a href="#" class="subscribe__link">E-mail</a>
-                <div class="subscribe__button--arrow"></div>
+              <div class="subscribe__form">
+                <input
+                  type="email"
+                  class="subscribe__input"
+                  placeholder="E-mail"
+                />
+                <button type="submit" class="subscribe__button"></button>
               </div>
             </div>
           </div>
