--- a/src/index.html
+++ b/src/index.html
@@ -150,6 +150,7 @@
           </div>
         </div>
       </div>
+      <div class="menu__overlay"></div>
     </aside>
     <main class="main">
       <div class="main__content">
