--- a/src/index.html
+++ b/src/index.html
@@ -40,7 +40,7 @@
               ></a>
               <a
                 href="#"
-                class="top-bar__logo"
+                class="top-bar__logo logo"
               >
                 NA
                 <br />
@@ -75,10 +75,10 @@
               class="top-bar__icon icon icon--close"
             ></a>
             <div class="menu__nav nav">
-              <ul class="nav__list nav__list--left">
+              <ul class="nav__list">
                 <li class="nav__item">
                   <a
-                    href="#"
+                    href="#gallery"
                     class="nav__link"
                   >
                     Галерея
@@ -86,7 +86,7 @@
                 </li>
                 <li class="nav__item">
                   <a
-                    href="#"
+                    href="#events"
                     class="nav__link"
                   >
                     Виставки та
@@ -95,10 +95,10 @@
                   </a>
                 </li>
               </ul>
-              <ul class="nav__list nav__list--right">
+              <ul class="nav__list">
                 <li class="nav__item">
                   <a
-                    href="#"
+                    href="#subscribe"
                     class="nav__link"
                   >
                     Про Нас
@@ -106,7 +106,7 @@
                 </li>
                 <li class="nav__item">
                   <a
-                    href="#"
+                    href="#contacts"
                     class="nav__link"
                   >
                     Контакти
@@ -154,7 +154,7 @@
     </aside>
     <main class="main">
       <div class="main__content">
-        <section class="relevant">
+        <section class="relevant" id="events">
           <div class="container">
             <h2 class="relevant__title">Актуальні події</h2>
             <div class="relevant__content">
@@ -216,7 +216,7 @@
             </div>
           </article>
         </section>
-        <section class="gallery">
+        <section class="gallery" id="gallery">
           <div class="container">
             <h2 class="gallery__title">Галерея</h2>
             <div class="gallery__content">
@@ -262,7 +262,7 @@
             </div>
           </div>
         </section>
-        <section class="subscribe">
+        <section class="subscribe" id="subscribe">
           <div class="container">
             <div class="subscribe__content">
               <h2 class="subscribe__title">Підписка</h2>
@@ -275,12 +275,124 @@
                   class="subscribe__input"
                   placeholder="E-mail"
                 />
-                <button type="submit" class="subscribe__button"></button>
+                <button
+                  type="submit"
+                  class="subscribe__button"
+                ></button>
               </div>
             </div>
           </div>
         </section>
       </div>
     </main>
+    <footer class="footer" id="contacts">
+      <div class="container">
+        <div class="footer__content">
+          <div class="footer__social-media">
+            <a
+              href="#"
+              class="footer__logo logo"
+            >
+              NA
+              <br />
+              MU
+            </a>
+            <div class="footer__icons">
+              <a
+                href="#"
+                class="footer__icon icon icon--facebook"
+              ></a>
+              <a
+                href="#"
+                class="footer__icon icon icon--instagram"
+              ></a>
+            </div>
+          </div>
+          <div class="footer__info">
+            <div class="footer__schedule schedule">
+              <p class="schedule__title">Графік роботи</p>
+              <div class="schedule__content">
+                <ul class="schedule__week">
+                  <li class="schedule__day">
+                    <strong class="schedule__day--strong">12:00 — 20:00</strong>
+                    середа
+                  </li>
+                  <li class="schedule__day">
+                    <strong class="schedule__day--strong">12:00 — 20:00</strong>
+                    четвер
+                  </li>
+                  <li class="schedule__day">
+                    <strong class="schedule__day--strong">12:00 — 20:00</strong>
+                    п’ятниця
+                  </li>
+                  <li class="schedule__day">
+                    <strong class="schedule__day--strong">11:00 — 19:00</strong>
+                    субота
+                  </li>
+                  <li class="schedule__day">
+                    <strong class="schedule__day--strong">11:00 — 19:00</strong>
+                    неділя
+                  </li>
+                </ul>
+                <p class="schedule__weekend">
+                  Вихідні: понеділок, вівторок
+                  <br />
+                  Каса припиняє роботу за 1 годину до закриття музею
+                </p>
+              </div>
+            </div>
+            <div class="footer__contacts contacts">
+              <p class="contacts__title">Контакти:</p>
+              <p class="contacts__text">
+                вул. М. Грушевського, 6; Київ, 01001 тел. +38 (044) 278-13-57
+                факс +38 (044) 278-74-54 e-mail: info@namu.kiev.ua
+              </p>
+            </div>
+          </div>
+          <div class="footer__nav nav">
+            <ul class="nav__list nav__list--left">
+              <li class="nav__item">
+                <a
+                  href="#gallery"
+                  class="nav__link"
+                >
+                  Галерея
+                </a>
+              </li>
+              <li class="nav__item">
+                <a
+                  href="#events"
+                  class="nav__link"
+                >
+                  Виставки та події
+                </a>
+              </li>
+            </ul>
+            <ul class="nav__list nav__list--right">
+              <li class="nav__item">
+                <a
+                  href="#subscribe"
+                  class="nav__link"
+                >
+                  Про Нас
+                </a>
+              </li>
+              <li class="nav__item">
+                <a
+                  href="#contacts"
+                  class="nav__link"
+                >
+                  Контакти
+                </a>
+              </li>
+            </ul>
+          </div>
+          <div class="footer__bottom">
+            <p class="footer__text">Designed by Zhyriada Marina</p>
+            <p class="footer__text">Copyright © 2019. All Rights Reserved.</p>
+          </div>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
