--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
       name="viewport"
       content="width=device-width, initial-scale=1.0"
     />
-    <title>Title</title>
+    <title>Національний музей</title>
     <link
       rel="preconnect"
       href="https://fonts.googleapis.com"
@@ -26,35 +26,37 @@
       rel="stylesheet"
       href="./styles/style.scss"
     />
+    <link
+      rel="icon shortcut"
+      href="./images/icons/favicon.png"
+      type="image/x-icon"
+    />
   </head>
 
   <body class="page__body">
     <header class="header">
       <div class="container">
         <div class="header__content">
-          <div class="header__top">
-            <div class="top-bar">
-              <a
-                href="#menu"
-                class="top-bar__icon icon icon--menu"
-              ></a>
-              <a
-                href="#"
-                class="top-bar__logo logo"
-              >
-                NA
-                <br />
-                MU
-              </a>
-            </div>
+          <div class="header__top-bar top-bar">
+            <a
+              href="#menu"
+              class="top-bar__icon icon icon--menu"
+            ></a>
+            <a
+              href="#"
+              class="top-bar__logo logo"
+            >
+              NA
+              <br />
+              MU
+            </a>
           </div>
-
-          <div class="header__info">
+          <div class="header__art-museum">
             <h1 class="header__title">ХУДОЖНІЙ МУЗЕЙ</h1>
             <p class="header__element">ПОДІЇ</p>
           </div>
           <a
-            href="#"
+            href="#events"
             class="header__button"
           >
             КВИТКИ
@@ -62,18 +64,21 @@
         </div>
       </div>
       <div class="header__bg"></div>
+      <a class="header__up" href="#"></a>
     </header>
+
     <aside
       class="menu page__menu"
       id="menu"
     >
       <div class="container">
         <div class="menu__content">
-          <div class="menu__top top-bar">
+          <div class="menu__top-bar top-bar">
             <a
               href="#"
               class="top-bar__icon icon icon--close"
             ></a>
+
             <div class="menu__nav nav">
               <ul class="nav__list">
                 <li class="nav__item">
@@ -152,9 +157,13 @@
       </div>
       <div class="menu__overlay"></div>
     </aside>
+
     <main class="main">
       <div class="main__content">
-        <section class="relevant" id="events">
+        <section
+          class="relevant"
+          id="events"
+        >
           <div class="container">
             <h2 class="relevant__title">Актуальні події</h2>
             <div class="relevant__content">
@@ -216,7 +225,10 @@
             </div>
           </article>
         </section>
-        <section class="gallery" id="gallery">
+        <section
+          class="gallery"
+          id="gallery"
+        >
           <div class="container">
             <h2 class="gallery__title">Галерея</h2>
             <div class="gallery__content">
@@ -262,30 +274,38 @@
             </div>
           </div>
         </section>
-        <section class="subscribe" id="subscribe">
+        <section
+          class="subscribe"
+          id="subscribe"
+        >
           <div class="container">
             <div class="subscribe__content">
               <h2 class="subscribe__title">Підписка</h2>
               <p class="subscribe__text">
                 Бути в курсі всіх актуальних подій та останніх новин.
               </p>
-              <div class="subscribe__form">
+              <form class="subscribe__form">
                 <input
                   type="email"
                   class="subscribe__input"
                   placeholder="E-mail"
+                  required
                 />
                 <button
                   type="submit"
                   class="subscribe__button"
                 ></button>
-              </div>
+              </form>
             </div>
           </div>
         </section>
       </div>
     </main>
-    <footer class="footer" id="contacts">
+
+    <footer
+      class="footer"
+      id="contacts"
+    >
       <div class="container">
         <div class="footer__content">
           <div class="footer__social-media">
@@ -299,11 +319,13 @@
             </a>
             <div class="footer__icons">
               <a
-                href="#"
+                href="https://www.facebook.com/namu.museum/?locale=uk_UA"
+                target="_blank"
                 class="footer__icon icon icon--facebook"
               ></a>
               <a
-                href="#"
+                href="https://www.instagram.com/namu.museum/?igshid=YmMyMTA2M2Y%3D"
+                target="_blank"
                 class="footer__icon icon icon--instagram"
               ></a>
             </div>
