--- a/src/index.html
+++ b/src/index.html
@@ -64,7 +64,10 @@
         </div>
       </div>
       <div class="header__bg"></div>
-      <a class="header__up" href="#"></a>
+      <a
+        class="header__up"
+        href="#"
+      ></a>
     </header>
 
     <aside
@@ -366,10 +369,30 @@
             <div class="footer__contacts contacts">
               <p class="contacts__title">Контакти:</p>
               <p class="contacts__info">
-                <a href="https://maps.app.goo.gl/4mzqrWfSkRePgKcL8" class="contacts__link"> вул. М. Грушевського, 6; Київ, 01001</a>
-                <a href="tel: +38 (044) 278-13-57" class="contacts__link">тел. +38 (044) 278-13-57</a>
-                <a href="tel: +38 (044) 278-74-54" class="contacts__link">факс +38 (044) 278-74-54</a>
-                <a href="mailto:info@namu.kiev.ua" class="contacts__link">e-mail: info@namu.kiev.ua</a>
+                <a
+                  href="https://maps.app.goo.gl/4mzqrWfSkRePgKcL8"
+                  class="contacts__link"
+                >
+                  вул. М. Грушевського, 6; Київ, 01001
+                </a>
+                <a
+                  href="tel: +38 (044) 278-13-57"
+                  class="contacts__link"
+                >
+                  тел. +38 (044) 278-13-57
+                </a>
+                <a
+                  href="tel: +38 (044) 278-74-54"
+                  class="contacts__link"
+                >
+                  факс +38 (044) 278-74-54
+                </a>
+                <a
+                  href="mailto:info@namu.kiev.ua"
+                  class="contacts__link"
+                >
+                  e-mail: info@namu.kiev.ua
+                </a>
               </p>
             </div>
           </div>
