update form and slider

--- a/src/index.html
+++ b/src/index.html
@@ -287,7 +287,10 @@
               <p class="subscribe__text">
                 Бути в курсі всіх актуальних подій та останніх новин.
               </p>
-              <form class="subscribe__form">
+              <form
+                class="subscribe__form"
+                target="_self"
+              >
                 <input
                   type="email"
                   class="subscribe__input"
