--- a/src/index.html
+++ b/src/index.html
@@ -289,7 +289,7 @@
               </p>
               <form
                 class="subscribe__form"
-                target="_self"
+                onsubmit="this.reset(); return false;"
               >
                 <input
                   type="email"
