--- a/src/index.html
+++ b/src/index.html
@@ -1,19 +1,551 @@
 <!doctype html>
-<html lang="en">
+<html
+  lang="en"
+  class="page"
+>
   <head>
     <meta charset="UTF-8" />
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1.0"
     />
-    <title>Title</title>
+    <title>Museum</title>
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"
+    />
     <link
       rel="stylesheet"
       href="./styles/main.scss"
     />
+    <link
+      rel="icon"
+      href="./images/favicon/favicon.jpg"
+    />
+    <link
+      rel="preconnect"
+      href="https://fonts.googleapis.com"
+    />
+    <link
+      rel="preconnect"
+      href="https://fonts.gstatic.com"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100..900&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap"
+      rel="stylesheet"
+    />
   </head>
-  <body>
-    <h1>Hello Mate Academy</h1>
+
+  <body
+    class="page__body"
+    id="page-top"
+  >
+    <header class="header">
+      <div class="header__content">
+        <div class="icon">
+          <a
+            href="#menu"
+            class="icon__menu"
+          ></a>
+          <a
+            href="#"
+            class="icon__namu"
+          >
+            <h1 class="icon__namu--text">na</h1>
+            <h1 class="icon__namu--text">mu</h1>
+          </a>
+        </div>
+      </div>
+
+      <div class="tickets">
+        <div
+          class="tickets__content"
+          id="tickets"
+        >
+          <h1 class="tickets--header-h1">
+            художній
+            <br />
+            музей
+          </h1>
+        </div>
+      </div>
+
+      <div class="buttons">
+        <div class="buttons__content">
+          <div class="buttons--text">Квитки</div>
+          <a href="#current-events">
+            <button class="buttons--button-square">
+              <div
+                class="buttons--button-square--arrow buttons--button-square--arrow-right"
+              ></div>
+            </button>
+          </a>
+        </div>
+      </div>
+
+      <div class="link-events">
+        <a
+          href="#"
+          target="_blank"
+          class="text-decoration"
+        >
+          <div class="link-event">
+            <div class="link-event-line"></div>
+            <p class="link-event-text">події</p>
+          </div>
+        </a>
+      </div>
+    </header>
+
+    <div class="page__bgc-gray">
+      <aside
+        class="menu page__menu"
+        id="menu"
+      >
+        <div class="menu__over">
+          <a
+            href="#"
+            class="icon__close"
+          ></a>
+          <div class="menu__top">
+            <nav class="nav menu__nav">
+              <ul class="nav__list">
+                <li class="nav__item nav__item-padding-bottom">
+                  <a
+                    class="nav__link"
+                    href="#gallery"
+                  >
+                    Галерея
+                  </a>
+                </li>
+                <li class="nav__item">
+                  <a
+                    class="nav__link"
+                    href="#current-events"
+                  >
+                    Виставки та події
+                  </a>
+                </li>
+              </ul>
+            </nav>
+            <nav class="nav menu__nav">
+              <ul class="nav__list">
+                <li class="nav__item nav__item-padding-bottom">
+                  <a
+                    class="nav__link"
+                    href="#subscription"
+                  >
+                    Про Нас
+                  </a>
+                </li>
+                <li class="nav__item">
+                  <a
+                    class="nav__link"
+                    href="#contacts"
+                  >
+                    Контакти
+                  </a>
+                </li>
+              </ul>
+            </nav>
+          </div>
+          <div class="white-line"></div>
+        </div>
+        <div class="work-schedule">
+          <p class="work-schedule__head">Графік роботи</p>
+          <div class="work-schedule__content">
+            <nav class="work-schedule__nav">
+              <ul class="work-schedule__nav--list">
+                <li class="work-schedule__nav--item">
+                  <span class="text-semibold">12:00 - 20:00</span>
+                  середа
+                </li>
+                <li class="work-schedule__nav--item">
+                  <span class="text-semibold">12:00 - 20:00</span>
+                  четвер
+                </li>
+                <li class="work-schedule__nav--item">
+                  <span class="text-semibold">12:00 - 20:00</span>
+                  п'ятниця
+                </li>
+                <li class="work-schedule__nav--item">
+                  <span class="text-semibold">11:00 - 19:00</span>
+                  субота
+                </li>
+                <li class="work-schedule__nav--item">
+                  <span class="text-semibold">11:00 - 19:00</span>
+                  неділя
+                </li>
+              </ul>
+            </nav>
+            <div class="work-schedule--description">
+              <p class="work-schedule--description-p">
+                <span class="text-semibold">Вихідні:</span>
+                понеділок, вівторок
+              </p>
+              <p class="work-schedule--description-p">
+                Каса припиняє роботу за 1 годину до закриття музею
+              </p>
+            </div>
+          </div>
+        </div>
+      </aside>
+    </div>
+
+    <main>
+      <section
+        class="current-events"
+        id="current-events"
+      >
+        <div class="events-header">
+          <h2 class="events-header__header-h2">Актуальні події</h2>
+        </div>
+
+        <img
+          src="./images/current-events/exhibition-one.svg"
+          alt="exhibition-one"
+          class="image-exhibition"
+        />
+
+        <div class="event">
+          <div class="datum">
+            <p class="datum__text">ВИСТАВКА</p>
+            <p class="datum__numbers">26.08-29.11.2019</p>
+          </div>
+
+          <div class="revelant">
+            <div class="revelant__header-h3">
+              <h3 class="revelant__header-h3--text">Йду і повертаюсь</h3>
+              <div class="revelant__header-h3--square"></div>
+            </div>
+            <p class="revelant__description">
+              Національний Художній Музей України презентує унікальну частину
+              колекції Градобанку - українське мистецтво другої половини
+              1980-1995 років.
+            </p>
+          </div>
+        </div>
+
+        <img
+          src="./images/current-events/exhibition-second.svg"
+          alt="exhibition-one"
+          class="image-exhibition"
+        />
+
+        <div class="event">
+          <div class="datum">
+            <p class="datum__text">ВИСТАВКА</p>
+            <p class="datum__numbers">26.08-29.11.2019</p>
+          </div>
+
+          <div class="revelant">
+            <div class="revelant__header-h3">
+              <h3 class="revelant__header-h3--text">І спогади і мрії</h3>
+              <div class="revelant__header-h3--square"></div>
+            </div>
+            <p class="revelant__description">
+              Національний художній музей України до 100 річчя від дня
+              народження видатної української художниці Тетяни Яблонської
+              відкриває ретроспективну ювілейну виставку «І спогади і мрії».
+            </p>
+          </div>
+        </div>
+      </section>
+
+      <section
+        class="classicism-romanticism"
+        id="classicism-romanticism"
+      >
+        <div class="img"></div>
+        <div class="lecture">
+          <div class="datum datum-lecture">
+            <p class="datum__text">ЛЕКЦІЯ</p>
+            <p class="datum__numbers">26.08-29.11.2019</p>
+          </div>
+          <h3 class="name-lecture">
+            Від класицизму до
+            <br />
+            романтизму
+          </h3>
+        </div>
+      </section>
+
+      <section
+        class="gallery"
+        id="gallery"
+      >
+        <h2 class="gallery__header-h2">Галерея</h2>
+
+        <div class="slide-container swiper slider grid">
+          <div class="slide-content">
+            <div class="swiper-wrapper">
+              <div class="swiper-slide">
+                <img
+                  src="./images/gallery/divchuna.svg"
+                  alt="divchuna"
+                  class="img-swiper"
+                />
+              </div>
+              <div class="swiper-slide">
+                <img
+                  src="./images/gallery/husi.svg"
+                  alt="husi"
+                  class="img-swiper"
+                />
+              </div>
+              <div class="swiper-slide">
+                <img
+                  src="./images/gallery/lito.svg"
+                  alt="lito"
+                  class="img-swiper img-lito"
+                />
+              </div>
+              <div class="swiper-slide">
+                <img
+                  src="./images/gallery/more.svg"
+                  alt="more"
+                  class="img-swiper"
+                />
+              </div>
+              <div class="swiper-slide">
+                <img
+                  src="./images/gallery/zuma.svg"
+                  alt="zuma"
+                  class="img-swiper img-zuma"
+                />
+              </div>
+            </div>
+          </div>
+
+          <div class="swiper-pagination pagination"></div>
+        </div>
+
+        <div class="desktop--flex-column-4-start">
+          <div class="desktop--images">
+            <img
+              src="./images/gallery/divchuna.svg"
+              alt="divchuna"
+              class="desktop--divchuna"
+            />
+          </div>
+        </div>
+
+        <div class="desktop--flex-column-8-end">
+          <div class="desktop--images">
+            <img
+              src="./images/gallery/zuma.svg"
+              alt="zuma"
+              class="desktop--zuma"
+            />
+          </div>
+        </div>
+
+        <div class="desktop--flex-column-8-start">
+          <div class="desktop--images">
+            <img
+              src="./images/gallery/lito.svg"
+              alt="lito"
+              class="desktop--lito"
+            />
+          </div>
+        </div>
+
+        <div class="desktop--flex-column-4-end">
+          <div class="desktop--images">
+            <img
+              src="./images/gallery/more.svg"
+              alt="more"
+              class="desktop--more"
+            />
+          </div>
+        </div>
+      </section>
+
+      <section
+        class="subscription subscription-bgi"
+        id="subscription"
+      >
+        <h2 class="subscription--header-h2">Підписка</h2>
+        <h3 class="subscription--header-h3">
+          Бути в курсі всіх актуальних подій та останніх новин.
+        </h3>
+
+        <form
+          action="http://localhost:3000/api"
+          method="post"
+          autocomplete="off"
+          class="form-email"
+          onsubmit="this.reset(); return false;"
+        >
+          <div class="buttons-form">
+            <div class="buttons-form__subscription">
+              <div class="buttons-form--text-email">
+                <input
+                  type="email"
+                  name="useremail"
+                  id="useremail"
+                  placeholder="E-mail"
+                  class="buttons-form__email"
+                  required
+                />
+              </div>
+              <button class="buttons-form--button-square-orange">
+                <div
+                  class="buttons-form--button-square-orange--arrow buttons-form--button-square-orange--arrow-right"
+                ></div>
+              </button>
+            </div>
+          </div>
+        </form>
+      </section>
+
+      <section
+        class="contacts"
+        id="contacts"
+      >
+        <div class="contact">
+          <a
+            href="#"
+            class="contact__icon-namu"
+          >
+            <h1 class="contact__icon-namu--text">na</h1>
+            <h1 class="contact__icon-namu--text">mu</h1>
+          </a>
+          <div class="contact--socials">
+            <a
+              href="http://facebook.com"
+              target="_blank"
+              class="contact--socials__facebook"
+            ></a>
+            <a
+              href="http://instagram.com"
+              target="_blank"
+              class="contact--socials__instagram"
+            ></a>
+          </div>
+        </div>
+
+        <div class="work-schedule-bottom">
+          <p class="work-schedule-bottom__head">Графік роботи</p>
+          <nav class="work-schedule-bottom__nav">
+            <ul class="work-schedule-bottom__nav--list">
+              <li class="work-schedule-bottom__nav--item">
+                <span class="text-semibold">12:00 - 20:00</span>
+                середа
+              </li>
+              <li class="work-schedule-bottom__nav--item">
+                <span class="text-semibold">12:00 - 20:00</span>
+                четвер
+              </li>
+              <li class="work-schedule-bottom__nav--item">
+                <span class="text-semibold">12:00 - 20:00</span>
+                п'ятниця
+              </li>
+              <li class="work-schedule-bottom__nav--item">
+                <span class="text-semibold">11:00 - 19:00</span>
+                субота
+              </li>
+              <li class="work-schedule-bottom__nav--item">
+                <span class="text-semibold">11:00 - 19:00</span>
+                неділя
+              </li>
+            </ul>
+          </nav>
+          <p class="work-schedule-bottom--description">
+            <span class="text-semibold">Вихідні:</span>
+            понеділок, вівторок
+          </p>
+          <p class="work-schedule-bottom--description">
+            Каса припиняє роботу за 1 годину до закриття музею
+          </p>
+        </div>
+
+        <div class="work-schedule-bottom__contact">
+          <p class="work-schedule-bottom__head">Контакти</p>
+          <p class="work-schedule-bottom--description-contact">
+            вул. М. Грушевського, 6; Київ,
+          </p>
+          <p class="work-schedule-bottom--description-contact">01001</p>
+          <p class="work-schedule-bottom--description-contact">
+            тел. +38 (044) 278-13-57
+          </p>
+          <p class="work-schedule-bottom--description-contact">
+            факс +38 (044) 278-74-54
+          </p>
+          <p class="work-schedule-bottom--description-contact">
+            e-mail: info@namu.kiev.ua
+          </p>
+        </div>
+
+        <div class="gray-line"></div>
+
+        <div class="nav-bottom-right">
+          <nav class="nav-bottom">
+            <ul class="nav-bottom__list">
+              <li class="nav-bottom__item nav-bottom__item-padding-bottom">
+                <a
+                  class="nav-bottom__link"
+                  href="#gallery"
+                >
+                  Галерея
+                </a>
+              </li>
+              <li class="nav-bottom__item">
+                <a
+                  class="nav-bottom__link"
+                  href="#current-events"
+                >
+                  Виставки та події
+                </a>
+              </li>
+            </ul>
+          </nav>
+        </div>
+
+        <div class="nav-bottom-left">
+          <nav class="nav-bottom">
+            <ul class="nav-bottom__list">
+              <li class="nav-bottom__item nav-bottom__item-padding-bottom">
+                <a
+                  class="nav-bottom__link"
+                  href="#subscription"
+                >
+                  Про Нас
+                </a>
+              </li>
+              <li class="nav-bottom__item">
+                <a
+                  class="nav-bottom__link"
+                  href="#contacts"
+                >
+                  Контакти
+                </a>
+              </li>
+            </ul>
+          </nav>
+        </div>
+      </section>
+    </main>
+
+    <a
+      href="#page-top"
+      class="go-top"
+    >
+      <div class="go-top--arrow"></div>
+    </a>
+
+    <footer class="footer">
+      <div class="div">
+        <p class="designer">Designed by Zhyriada Marina</p>
+        <p class="designer">Copyright © 2019. All Rights Reserved.</p>
+      </div>
+    </footer>
+
+    <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
     <script src="scripts/main.js"></script>
   </body>
 </html>
