--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
     />
     <title>National Art Museum of Ukraine</title>
     <script
-      src="scripts/main.js"
+      src="./scripts/main.js"
       defer
     ></script>
     <link
@@ -532,7 +532,7 @@
             href="#top"
           >
             <img
-              src="./images//icons/arrow_up.png"
+              src="./images/icons/arrow_up.png"
               alt="Arrow up"
             />
           </a>
@@ -585,4 +585,3 @@
     </footer>
   </body>
 </html>
-
