--- a/src/index.html
+++ b/src/index.html
@@ -75,16 +75,19 @@
       </div>
 
       <div class="buttons">
-        <div class="buttons__content">
-          <div class="buttons--text">Квитки</div>
-          <a href="#current-events">
+        <a
+          href="#current-events"
+          class="text-decoration"
+        >
+          <div class="buttons__content">
+            <div class="buttons--text">Квитки</div>
             <button class="buttons--button-square">
               <div
                 class="buttons--button-square--arrow buttons--button-square--arrow-right"
               ></div>
             </button>
-          </a>
-        </div>
+          </div>
+        </a>
       </div>
 
       <div class="link-events">
@@ -466,19 +469,34 @@
 
         <div class="work-schedule-bottom__contact">
           <p class="work-schedule-bottom__head">Контакти</p>
-          <p class="work-schedule-bottom--description-contact">
-            вул. М. Грушевського, 6; Київ,
-          </p>
-          <p class="work-schedule-bottom--description-contact">01001</p>
-          <p class="work-schedule-bottom--description-contact">
-            тел. +38 (044) 278-13-57
-          </p>
-          <p class="work-schedule-bottom--description-contact">
-            факс +38 (044) 278-74-54
-          </p>
-          <p class="work-schedule-bottom--description-contact">
-            e-mail: info@namu.kiev.ua
-          </p>
+
+          <a
+            href="https://www.google.com/maps/place/%D0%B2%D1%83%D0%BB%D0%B8%D1%86%D1%8F+%D0%9C%D0%B8%D1%85%D0%B0%D0%B9%D0%BB%D0%B0+%D0%93%D1%80%D1%83%D1%88%D0%B5%D0%B2%D1%81%D1%8C%D0%BA%D0%BE%D0%B3%D0%BE,+6,+%D0%9A%D0%B8%D1%97%D0%B2,+%D0%A3%D0%BA%D1%80%D0%B0%D1%97%D0%BD%D0%B0,+02000/@50.449332,30.5279603,16.87z/data=!4m6!3m5!1s0x40d4ce52445a8315:0x5e30ef474eddac89!8m2!3d50.449395!4d30.5307834!16s%2Fg%2F11l76wtstx?entry=ttu"
+            target="_blank"
+            class="work-schedule-bottom--description-contact"
+          >
+            <p class="work-schedule-bottom--text">
+              вул. М. Грушевського, 6; Київ, 01001
+            </p>
+          </a>
+          <a
+            href="tel:+1 234 5555-55-55"
+            class="work-schedule-bottom--description-contact"
+          >
+            <p class="work-schedule-bottom--text">тел. +38 (044) 278-13-57</p>
+          </a>
+          <a
+            href="tel:+1 234 5555-55-55"
+            class="work-schedule-bottom--description-contact"
+          >
+            <p class="work-schedule-bottom--text">факс +38 (044) 278-74-54</p>
+          </a>
+          <a
+            href="mailto:hello@bang&olufsen.com"
+            class="work-schedule-bottom--description-contact"
+          >
+            <p class="work-schedule-bottom--text">e-mail: info@namu.kiev.ua</p>
+          </a>
         </div>
 
         <div class="gray-line"></div>
