--- a/src/index.html
+++ b/src/index.html
@@ -296,7 +296,7 @@
                 id="myForm"
               >
                 <label for="email">
-                  <input 
+                  <input
                     class="subscription__email"
                     autocomplete="email"
                     type="email"
@@ -307,7 +307,9 @@
 
                 <button
                   id="submit"
-                  class="subscription__button">
+                  class="subscription__button"
+                  type="submit"
+                >
                 </button>
               </form>
             </div>
