--- a/src/index.html
+++ b/src/index.html
@@ -554,8 +554,8 @@
                     <ul class="schedule__list">
                       <li class="schedule__item">
                         <a
-                          href="#"
-                          class="schedule__text"
+                          href="https://www.google.com/maps/place/Mykhaila+Hrushevskoho+St,+6,+Kyiv,+Ukraine,+02000/@50.4493984,30.5282085,17z/data=!3m1!4b1!4m6!3m5!1s0x40d4ce52445a8315:0x5e30ef474eddac89!8m2!3d50.449395!4d30.5307834!16s%2Fg%2F11l76wtstx?entry=ttu"
+                          class="schedule__link"
                         >
                           вул. М. Грушевського, 6; Київ, 01001
                         </a>
@@ -563,8 +563,8 @@
 
                       <li class="schedule__item">
                         <a
-                          href="#"
-                          class="schedule__text"
+                          href="tel:+38 (044) 278-13-57"
+                          class="schedule__link"
                         >
                           тел. +38 (044) 278-13-57
                         </a>
@@ -573,7 +573,7 @@
                       <li class="schedule__item">
                         <a
                           href="#"
-                          class="schedule__text"
+                          class="schedule__link"
                         >
                           факс +38 (044) 278-74-54
                         </a>
@@ -581,9 +581,9 @@
 
                       <li class="schedule__item">
                         <a
-                          href="#"
-                          class="schedule__text"
-                        >
+                          href="mailto:info@namu.kiev.ua"
+                          class="schedule__link"
+                        target="_blank">
                           e-mail: info@namu.kiev.ua
                         </a>
                       </li>
