--- a/src/index.html
+++ b/src/index.html
@@ -34,7 +34,10 @@
     />
   </head>
   <body class="page__body">
-    <header class="header">
+    <header
+      class="header"
+      id="header"
+    >
       <div class="container">
         <div class="header__content">
           <div class="top-bar">
@@ -481,10 +484,12 @@
               </li>
             </ul>
 
-            <button
-              type="button"
-              class="footer__button"
-            ></button>
+            <a href="#header">
+              <button
+                type="button"
+                class="footer__button"
+              ></button>
+            </a>
           </div>
 
           <div class="footer__bottom footer__bottom--grid-column">
