--- a/src/index.html
+++ b/src/index.html
@@ -83,7 +83,7 @@
                 музей
               </h1>
               <a
-                href="#"
+                href="#events"
                 class="header__arrow-button"
               >
                 <button
