--- a/src/index.html
+++ b/src/index.html
@@ -471,7 +471,10 @@
             >
               <li class="nav__item-margin">Контакти:</li>
               <li>
-                <a href="https://maps.app.goo.gl/37mASCGHy54ifaKz9">
+                <a
+                  href="https://maps.app.goo.gl/37mASCGHy54ifaKz9"
+                  target="_blank"
+                >
                   вул. М. Грушевського, 6; Київ, 01001
                 </a>
               </li>
@@ -542,6 +545,7 @@
         </div>
       </div>
     </footer>
+
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
     <script src="./scripts/carousel.js"></script>
     <script src="scripts/main.js"></script>
