--- a/src/index.html
+++ b/src/index.html
@@ -154,42 +154,42 @@
       <section class="gallery section" id="gallery">
         <h2 class="gallery__title section__title">Галерея</h2>
         <div class="gallery__slider slider container">
-          <input class="slider__switch" type="radio"
+          <input class="slider__switch slide1" type="radio"
           name="slide"
           id="slide1" checked>
-          <input class="slider__switch" type="radio"
+          <input class="slider__switch slide2" type="radio"
           name="slide"
            id="slide2">
-          <input class="slider__switch" type="radio"
+          <input class="slider__switch slide3" type="radio"
           name="slide"
           id="slide3">
-          <input class="slider__switch" type="radio"
+          <input class="slider__switch slide4" type="radio"
           name="slide"
           id="slide4">
 
           <div class="gallery__slides slides">
-            <div class="slide" id="s1">
+            <div class="slide">
               <img
                class="slide__image"
                src="./images/gallery-girls.png"
                alt="Girls"
               >
             </div>
-            <div class="slide" id="s2">
+            <div class="slide">
               <img
                 class="slide__image"
                 src="./images/gallery-geese.png"
                 alt="Geese"
               >
             </div>
-            <div class="slide" id="s3">
+            <div class="slide">
               <img
                 class="slide__image"
                 src="./images/gallery-houses.png"
                 alt="Houses"
               >
             </div>
-            <div class="slide" id="s4">
+            <div class="slide">
               <img
                 class="slide__image"
                 src="./images/gallery-sea.png"
