full-width for img

--- a/src/index.html
+++ b/src/index.html
@@ -257,24 +257,27 @@
                   </p>
                 </div>
               </article>
-
-              <article class="actions__card actions__card--position">
-                <img
-                  class="actions__img-full-width"
-                  src="./images/action/lection-3@.png"
-                  alt="img"
-                />
-                <div class="actions__block actions__block--title-and-event">
-                  <div class="actions__action actions__action--inline">
-                    <p class="actions__type">Лекція</p>
-                    <p class="actions__date">26/08/2019 - 11:00</p>
-                  </div>
-                  <h3 class="actions__title-center">
-                    Від класицизму до романтизму
-                  </h3>
-                </div>
-              </article>
             </div>
+          </section>
+          <section class="actions-roman">
+            <article
+              class="actions__card actions__card--position page__full-width"
+            >
+              <img
+                class="actions__img-full-width"
+                src="./images/action/lection-3@.png"
+                alt="img"
+              />
+              <div class="actions__block actions__block--title-and-event">
+                <div class="actions__action actions__action--inline">
+                  <p class="actions__type">Лекція</p>
+                  <p class="actions__date">26/08/2019 - 11:00</p>
+                </div>
+                <h3 class="actions__title-center">
+                  Від класицизму до романтизму
+                </h3>
+              </div>
+            </article>
           </section>
           <section
             class="gallery"
@@ -416,14 +419,20 @@
               </a>
             </div>
             <div class="footer__icons">
-              <a href="https://www.facebook.com/namu.museum/?locale=ru_RU">
+              <a
+                href="https://www.facebook.com/namu.museum/?locale=ru_RU"
+                target="_blank"
+              >
                 <img
                   class="footer-icon"
                   src="./images/icon/facebook.png"
                   alt="facebook icon"
                 />
               </a>
-              <a href="https://www.instagram.com/namu.museum/">
+              <a
+                href="https://www.instagram.com/namu.museum/"
+                target="_blank"
+              >
                 <img
                   class="footer-icon"
                   src="./images/icon/instagram.png"
@@ -472,18 +481,36 @@
               <li class="nav__item-margin">Контакти:</li>
               <li>
                 <a
+                  class="nav__item-hover"
                   href="https://maps.app.goo.gl/37mASCGHy54ifaKz9"
                   target="_blank"
                 >
                   вул. М. Грушевського, 6; Київ, 01001
                 </a>
               </li>
-              <li><a href="tel:380442781357">тел. +38 (044) 278-13-57</a></li>
               <li>
-                <a href="fax:380442787554">факс +38 (044) 278-74-54</a>
+                <a
+                  href="tel:380442781357"
+                  class="nav__item-hover"
+                >
+                  тел. +38 (044) 278-13-57
+                </a>
               </li>
               <li>
-                <a href="mailto:info@namu.kiev.ua">e-mail: info@namu.kiev.ua</a>
+                <a
+                  href="fax:380442787554"
+                  class="nav__item-hover"
+                >
+                  факс +38 (044) 278-74-54
+                </a>
+              </li>
+              <li>
+                <a
+                  href="mailto:info@namu.kiev.ua"
+                  class="nav__item-hover"
+                >
+                  e-mail: info@namu.kiev.ua
+                </a>
               </li>
             </ul>
 
