--- a/src/index.html
+++ b/src/index.html
@@ -1,19 +1,511 @@
 <!doctype html>
-<html lang="en">
+<html lang="ua">
   <head>
     <meta charset="UTF-8" />
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1.0"
     />
-    <title>Title</title>
+    <title>Museum</title>
+    <link
+      rel="icon"
+      href="./images/icons/NA MU.png"
+      type="image/png"
+    />
     <link
       rel="stylesheet"
       href="./styles/main.scss"
     />
   </head>
   <body>
-    <h1>Hello Mate Academy</h1>
+    <header
+      class="header"
+      id="about-us"
+    >
+      <div class="header__bg-field">
+        <a
+          href="#"
+          target="_blank"
+          class="header__logo"
+        >
+          Na
+          <br />
+          mu
+        </a>
+      </div>
+
+      <a
+        href="#menu"
+        class="header__menu"
+      ></a>
+
+      <div class="header__description">
+        <h1 class="header__title">Художній музей</h1>
+        <a
+          class="header__button"
+          href="#events"
+        >
+          Купити
+        </a>
+      </div>
+
+      <div class="header__decoration">
+        <p class="header__decoration--text">Події</p>
+      </div>
+
+      <aside
+        id="menu"
+        class="menu"
+      >
+        <a
+          href="#"
+          class="menu__close-icon"
+        ></a>
+
+        <div class="menu__info-fields">
+          <ul class="menu__sections-list sections-list">
+            <li class="menu__sections-list--item">
+              <a
+                href="#gallery"
+                target="_blank"
+                class="menu__sections-list-link"
+              >
+                Галерея
+              </a>
+            </li>
+
+            <li class="menu__sections-list--item">
+              <a
+                href="#subscription"
+                target="_blank"
+                class="menu__sections-list-link"
+              >
+                Про Нас
+              </a>
+            </li>
+
+            <li class="menu__sections-list--item">
+              <a
+                href="#events"
+                target="_blank"
+                class="menu__sections-list-link"
+              >
+                Виставки та події
+              </a>
+            </li>
+
+            <li class="menu__sections-list--item">
+              <a
+                href="#contacts"
+                target="_blank"
+                class="menu__sections-list-link"
+              >
+                Контакти
+              </a>
+            </li>
+          </ul>
+
+          <div class="work-schedule">
+            <h3 class="work-schedule__title">Графік роботи</h3>
+
+            <ul class="work-schedule__list">
+              <div class="work-schedule__list--field">
+                <li class="work-schedule__list--item">
+                  <span class="bold-text">12:00 — 20:00</span>
+                  середа
+                </li>
+
+                <li class="work-schedule__list--item">
+                  <span class="bold-text">12:00 — 20:00</span>
+                  четвер
+                </li>
+
+                <li class="work-schedule__list--item">
+                  <span class="bold-text">12:00 — 20:00</span>
+                  п’ятниця
+                </li>
+
+                <li class="work-schedule__list--item">
+                  <span class="bold-text">11:00 — 19:00</span>
+                  субота
+                </li>
+
+                <li class="work-schedule__list--item">
+                  <span class="bold-text">11:00 — 19:00</span>
+                  неділя
+                </li>
+              </div>
+
+              <li class="work-schedule__list--item">
+                <span class="bold-text">Вихідні:</span>
+                понеділок, вівторок
+                <br />
+                Каса припиняє роботу за 1 годину до закриття музею
+              </li>
+            </ul>
+          </div>
+        </div>
+      </aside>
+
+      <div
+        class="overlay"
+        id="overlay"
+      ></div>
+    </header>
+
+    <main class="main">
+      <section
+        class="section current-events"
+        id="events"
+      >
+        <h2 class="current-events__title">Актуальні події</h2>
+
+        <ul class="current-events__list">
+          <li class="current-events__list--item item">
+            <a
+              class="item__link"
+              href="#"
+              target="_blank"
+            >
+              <img
+                class="item__image"
+                src="./images/current-event-image-1.png"
+                alt="current-event-image-1"
+              />
+            </a>
+
+            <div>
+              <div class="item__date-field">
+                <p class="item__date-field--name">Виставка</p>
+                <p class="item__date-field--data">26.08-29.11.2019</p>
+              </div>
+
+              <div class="item__title-field">
+                <h3 class="item__title">Йду і повертаюсь</h3>
+                <div class="item__red-square"></div>
+              </div>
+
+              <p class="item__description">
+                Національний Художній Музей України презентує унікальну частину
+                колекції Градобанку - українське мистецтво другої половини
+                1980-1995 років.
+              </p>
+            </div>
+          </li>
+
+          <li class="current-events__list--item item">
+            <a
+              class="item__link"
+              href="#"
+              target="_blank"
+            >
+              <img
+                class="item__image"
+                src="./images/current-event-image-2.png"
+                alt="current-event-image-2"
+              />
+            </a>
+
+            <div>
+              <div class="item__date-field">
+                <p class="item__date-field--name">Виставка</p>
+                <p class="item__date-field--data">26.08-29.11.2019</p>
+              </div>
+
+              <div class="item__title-field">
+                <h3 class="item__title">І спогади і мрії</h3>
+                <div class="item__red-square"></div>
+              </div>
+
+              <p class="item__description">
+                Національний художній музей України до 100 річчя від дня
+                народження видатної української художниці Тетяни Яблонської
+                відкриває ретроспективну ювілейну виставку «І спогади і мрії».
+              </p>
+            </div>
+          </li>
+        </ul>
+      </section>
+
+      <section class="romantism">
+        <div class="romantism__bg"></div>
+        <div class="romantism__card">
+          <div class="romantism__info">
+            <p class="romantism__info--lecture">Лекція</p>
+            <p class="romantism__info--data">26/08/2019 - 11:00</p>
+          </div>
+          <h2 class="romantism__title">Від класицизму до романтизму</h2>
+        </div>
+      </section>
+
+      <section
+        class="section gallery"
+        id="gallery"
+      >
+        <h2 class="gallery__title">Галерея</h2>
+        <div class="gallery__container">
+          <ul class="gallery__list">
+            <li class="gallery__item">
+              <img
+                src="./images/gallery-image-1.png"
+                alt="gallery-image-1"
+                class="gallery__image image-1"
+              />
+            </li>
+
+            <li class="gallery__item">
+              <img
+                src="./images/gallery-image-2.png"
+                alt="gallery-image-2"
+                class="gallery__image image-2"
+              />
+            </li>
+
+            <li class="gallery__item">
+              <img
+                src="./images/gallery-image-3.png"
+                alt="gallery-image-3"
+                class="gallery__image image-3"
+              />
+            </li>
+
+            <li class="gallery__item">
+              <img
+                src="./images/gallery-image-4.png"
+                alt="gallery-image-4"
+                class="gallery__image image-4"
+              />
+            </li>
+
+            <li class="gallery__item">
+              <img
+                src="./images/gallery-image-5.png"
+                alt="gallery-image-4"
+                class="gallery__image image-5"
+              />
+            </li>
+          </ul>
+
+          <div class="gallery__indicators">
+            <button
+              class="gallery__indicator"
+              data-slide="0"
+            ></button>
+            <button
+              class="gallery__indicator"
+              data-slide="1"
+            ></button>
+            <button
+              class="gallery__indicator"
+              data-slide="2"
+            ></button>
+            <button
+              class="gallery__indicator"
+              data-slide="3"
+            ></button>
+          </div>
+        </div>
+      </section>
+
+      <section
+        class="subscription"
+        id="subscription"
+      >
+        <h2 class="subscription__title">Підписка</h2>
+        <p class="subscription__text">
+          Бути в курсі всіх актуальних подій та останніх новин.
+        </p>
+
+        <form
+          class="subscription__form"
+          onsubmit="this.reset(); return false;"
+        >
+          <input
+            class="subscription__input"
+            type="email"
+            name="email"
+            autocomplete="off"
+            placeholder="E-mail"
+            required
+          />
+
+          <button
+            type="submit"
+            class="subscription__button"
+          ></button>
+        </form>
+      </section>
+    </main>
+
+    <footer class="footer">
+      <div class="footer__info-field">
+        <div class="footer__first-section">
+          <img
+            class="footer__logo"
+            src="./images/icons/NA MU.png"
+            alt="logo"
+          />
+
+          <ul class="footer__social-list">
+            <li
+              class="footer__social-item icon facebook"
+              aria-label="facebook"
+            >
+              <a
+                class="footer__social-list--link"
+                target="_blank"
+                href="https://www.facebook.com/namu.museum/"
+              ></a>
+            </li>
+
+            <li
+              class="footer__social-item icon instagram"
+              aria-label="instagram"
+            >
+              <a
+                class="footer__social-list--link"
+                target="_blank"
+                href="https://www.instagram.com/namu.museum/"
+              ></a>
+            </li>
+          </ul>
+        </div>
+
+        <div class="footer__lists-field">
+          <div class="footer__second-section">
+            <ul class="footer__schedule-list">
+              <h3 class="footer__schedule-list--title">Графік роботи</h3>
+
+              <li class="footer__schedule-item">
+                <span class="footer__schedule-list--bold">12:00 — 20:00</span>
+                середа
+              </li>
+
+              <li class="footer__schedule-item">
+                <span class="footer__schedule-list--bold">12:00 — 20:00</span>
+                четвер
+              </li>
+
+              <li class="footer__schedule-item">
+                <span class="footer__schedule-list--bold">12:00 — 20:00</span>
+                п’ятниця
+              </li>
+
+              <li class="footer__schedule-item">
+                <span class="footer__schedule-list--bold">11:00 — 19:00</span>
+                субота
+              </li>
+
+              <li class="footer__schedule-item">
+                <span class="footer__schedule-list--bold">11:00 — 19:00</span>
+                неділя
+              </li>
+
+              <p class="footer__schedule-list--text">
+                Вихідні понеділок, вівторок
+              </p>
+              <p>Каса припиняє роботу за 1 годину до закриття музею</p>
+            </ul>
+
+            <ul
+              class="footer__contact-list-info"
+              id="contacts"
+            >
+              <h3 class="footer__contact-list-info--title">Контакти:</h3>
+
+              <li class="footer__contact-list-info--item">
+                <a
+                  class="footer__contact-list-info--link"
+                  href="https://www.google.com/maps/place/%D0%B2%D1%83%D0%BB%D0%B8%D1%86%D1%8F+%D0%9C%D0%B8%D1%85%D0%B0%D0%B9%D0%BB%D0%B0+%D0%93%D1%80%D1%83%D1%88%D0%B5%D0%B2%D1%81%D1%8C%D0%BA%D0%BE%D0%B3%D0%BE,+6,+%D0%9A%D0%B8%D1%97%D0%B2,+02000/data=!4m2!3m1!1s0x40d4ce52445a8315:0x5e30ef474eddac89?sa=X&ved=1t:242&ictx=111"
+                >
+                  вул. М. Грушевського, 6; Київ, 01001
+                </a>
+              </li>
+
+              <li class="footer__contact-list-info--item">
+                <a
+                  class="footer__contact-list-info--link"
+                  href="tel:+38 (044) 278-13-57"
+                >
+                  тел. +38 (044) 278-13-57
+                </a>
+              </li>
+
+              <li class="footer__contact-list-info--item">
+                <a
+                  class="footer__contact-list-info--link"
+                  href="tel:+38 (044) 278-74-54"
+                >
+                  факс +38 (044) 278-74-54
+                </a>
+              </li>
+
+              <li class="footer__contact-list-info--item">
+                <a
+                  class="footer__contact-list-info--link"
+                  href="mailto:info@namu.kiev.ua"
+                >
+                  e-mail: info@namu.kiev.ua
+                </a>
+              </li>
+            </ul>
+
+            <div class="back-to-top-field">
+              <a
+                class="back-to-top-field__button"
+                href="#"
+              ></a>
+            </div>
+          </div>
+
+          <ul class="footer__anchor-link-list">
+            <li class="footer__anchor-link-list--item">
+              <a
+                href="#gallery"
+                target="_blank"
+              >
+                Галерея
+              </a>
+            </li>
+
+            <li class="footer__anchor-link-list--item">
+              <a
+                href="#subscription"
+                target="_blank"
+              >
+                Про Нас
+              </a>
+            </li>
+
+            <li class="footer__anchor-link-list--item">
+              <a
+                href="#events"
+                target="_blank"
+              >
+                Виставки та події
+              </a>
+            </li>
+
+            <li class="footer__anchor-link-list--item">
+              <a
+                href="#contacts"
+                target="_blank"
+              >
+                Контакти
+              </a>
+            </li>
+          </ul>
+        </div>
+      </div>
+
+      <div class="footer__design-and-copyright-field">
+        <p class="footer__design-auther">Designed by Zhyriada Marina</p>
+        <p class="footer__copyright">
+          Copyright &copy; 2019. All Rights Reserved.
+        </p>
+      </div>
+    </footer>
+
     <script src="scripts/main.js"></script>
   </body>
 </html>
