--- a/src/index.html
+++ b/src/index.html
@@ -6,14 +6,53 @@
       name="viewport"
       content="width=device-width, initial-scale=1.0"
     />
-    <title>Title</title>
+    <title>NAMU</title>
+    <link
+      rel="icon"
+      href="./images/icon/favicon.svg"
+    />
     <link
       rel="stylesheet"
       href="./styles/main.scss"
     />
   </head>
+
   <body>
-    <h1>Hello Mate Academy</h1>
+
+    <!-- #region header -->
+    <header class="header">
+      <div class="header__container">
+        <a
+          href="#menu"
+          class="icon icon--menu"
+        ></a>
+
+        <div class="header__l-container">
+          <h1 class="header__title">Художній музей</h1>
+
+          <div class="header__t-container">
+            <button class="header__t-button">
+              <span class="header__t-text">Квитки</span>
+              <span class="header__t-show">
+                <img
+                  src="./images/icon/arrow.svg"
+                  alt="Arrow right"
+                />
+              </span>
+            </button>
+          </div>
+
+          <div class="header__e-container">
+            <span class="header__e-line"></span>
+            <p class="header__e-text">події</p>
+          </div>
+        </div>
+
+        <div class="header__bg"><h1>NA \n MU</h1></div>
+      </div>
+    </header>
+    <!-- #endregion -->
+
     <script src="scripts/main.js"></script>
   </body>
 </html>
