--- a/src/index.html
+++ b/src/index.html
@@ -18,7 +18,6 @@
   </head>
 
   <body>
-
     <!-- #region header -->
     <header class="header">
       <div class="header__container">
@@ -48,7 +47,15 @@
           </div>
         </div>
 
-        <div class="header__bg"><h1>NA \n MU</h1></div>
+        <div class="header__bg">
+          <div class="header__bg-t">
+            <h1>
+              NA
+              <br />
+              MU
+            </h1>
+          </div>
+        </div>
       </div>
     </header>
     <!-- #endregion -->
